--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                         </div>
                         <div class="text-center py-4">
                             <h5 class="text-truncate">Muhammad Ayondi R.</h5>
-                            <p class="m-0">Designation</p>
+                            <p class="m-0">DTP Cloud Computing</p>
                         </div>
                     </div>
                 </div>
@@ -430,7 +430,7 @@
                         </div>
                         <div class="text-center py-4">
                             <h5 class="text-truncate">Muhammad Habib Rifky</h5>
-                            <p class="m-0">Designation</p>
+                            <p class="m-0">DTP Hustler</p>
                         </div>
                     </div>
                 </div>
@@ -444,7 +444,7 @@
                         </div>
                         <div class="text-center py-4">
                             <h5 class="text-truncate">Naufal Akmaldi Putra</h5>
-                            <p class="m-0">Designation</p>
+                            <p class="m-0">DTP Design Produk</p>
                         </div>
                     </div>
                 </div>
@@ -458,7 +458,7 @@
                         </div>
                         <div class="text-center py-4">
                             <h5 class="text-truncate">Mochammad Nadhif A.</h5>
-                            <p class="m-0">Designation</p>
+                            <p class="m-0">DTP Hustler</p>
                         </div>
                     </div>
                 </div>
@@ -472,7 +472,7 @@
                         </div>
                         <div class="text-center py-4">
                             <h5 class="text-truncate">Dimas Dwi Suryo Aji</h5>
-                            <p class="m-0">Designation</p>
+                            <p class="m-0">DTP Hacker</p>
                         </div>
                     </div>
                 </div>
