--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
                         </div>
                         <div class="text-center py-4">
                             <h5 class="text-truncate">Muhammad Ayondi R.</h5>
-                            <p class="m-0">Designation</p>
+                            <p class="m-0">DTP Cloud Computing</p>
                         </div>
                     </div>
                 </div>
@@ -161,7 +161,7 @@
                         </div>
                         <div class="text-center py-4">
                             <h5 class="text-truncate">Muhammad Habib Rifky</h5>
-                            <p class="m-0">Designation</p>
+                            <p class="m-0">DTP Hustler</p>
                         </div>
                     </div>
                 </div>
@@ -175,7 +175,7 @@
                         </div>
                         <div class="text-center py-4">
                             <h5 class="text-truncate">Naufal Akmaldi Putra</h5>
-                            <p class="m-0">Designation</p>
+                            <p class="m-0">DTP Design Produk</p>
                         </div>
                     </div>
                 </div>
@@ -189,7 +189,7 @@
                         </div>
                         <div class="text-center py-4">
                             <h5 class="text-truncate">Mochammad Nadhif A.</h5>
-                            <p class="m-0">Designation</p>
+                            <p class="m-0">DTP Hustler</p>
                         </div>
                     </div>
                 </div>
@@ -203,7 +203,7 @@
                         </div>
                         <div class="text-center py-4">
                             <h5 class="text-truncate">Dimas Dwi Suryo Aji</h5>
-                            <p class="m-0">Designation</p>
+                            <p class="m-0">DTP Hacker</p>
                         </div>
                     </div>
                 </div>
