--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
                                 <img class="img-fluid" src="img/about-2.jpg" alt="">
                             </div>
                         </div>
-                        <a href="https://www.figma.com/file/n4SOnnvme4nTELHO5BkMUd/Prototyping-in-Figma?node-id=0%3A1&t=lufl51P98AWTOAAl-1" class="btn btn-primary mt-1">Pesan Sekarang</a>
+                        <a href="https://www.figma.com/proto/n4SOnnvme4nTELHO5BkMUd/Prototyping-in-Figma?node-id=0%3A2&starting-point-node-id=0%3A2" class="btn btn-primary mt-1">Pesan Sekarang</a>
                     </div>
                 </div>
             </div>
